--- a/SpotifyDashboard.Web/package.json
+++ b/SpotifyDashboard.Web/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build-production": "ng build --configuration=production",
+    "build-production": "ng build --configuration production",
     "build-development": "ng build "
 
   },
