--- a/SpotifyDashboard.Web/package.json
+++ b/SpotifyDashboard.Web/package.json
@@ -3,12 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --configuration development",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "build-production": "ng build --configuration production",
-    "build-development": "ng build "
+    "test": "ng test"
 
   },
   "private": true,
