--- a/SpotifyDashboard.Server/appsettings.json
+++ b/SpotifyDashboard.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MongoString": "mongodb://localhost:27017/"
+    "MongoString": "mongodb+srv://lucabernardis:DhFwEREDMdnr4M2q@spotify.m6n5ax1.mongodb.net/"
   },
   "Logging": {
     "LogLevel": {
