--- a/SpotifyDashboard.Server/appsettings.json
+++ b/SpotifyDashboard.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MongoString": "mongodb+srv://lucabernardis:DhFwEREDMdnr4M2q@spotify.m6n5ax1.mongodb.net/"
+    "MongoString": "mongodb://c865363014f2ffa6:110264f8147b21e2bd20198e00377551@mongo-0.dashboarddb--8f6hbsjgl6br.addon.code.run:27017/Spotify?replicaSet=rs0&authSource=Spotify&tls=true"
   },
   "Logging": {
     "LogLevel": {
